lib/src/compiler/tests/testdata/errors/121.out
error[E016]: invalid regexp modifier `x`
 --> line:3:24
  |
3 |     "foo" matches /foo/x
  |                        ^ invalid modifier
  |